--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8834 2010/01/10 16:21:05 snj Exp $
+$NetBSD: TODO,v 1.8835 2010/01/15 04:57:10 taca Exp $
 
 Suggested new packages
 ======================
@@ -1057,7 +1057,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o openmotif-2.3.2
 	o openmsx-0.7.0
 	o openssh-5.3.1
-	o openssl-0.9.8l
 	o openttd-0.7.4
 	o open-vm-tools-2009.12.16.217847
 	o opera-10.10
