--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.8835 2010/01/15 04:57:10 taca Exp $
+$NetBSD: TODO,v 1.8836 2010/01/15 10:37:38 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1299,8 +1299,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o sch-3.8.3
 	o scilab-5.2.0
 	o scm-5e5
-	o scmgit-base-1.6.6
-	o scmgit-docs-1.6.6
 	o scrollz-1.9.99
 	o scrotwm-0.9.21
 	o scsh-1.3.0
