--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.9214 2010/04/18 12:23:52 zafer Exp $
+$NetBSD: TODO,v 1.9215 2010/04/18 14:10:53 seb Exp $
 
 Suggested new packages
 ======================
@@ -1067,7 +1067,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o p5-Compress-Raw-Zlib-2.025
 	o p5-Config-General-2.45
 	o p5-DBD-postgresql-2.17.1
-	o p5-DateTime-Locale-0.45
 	o p5-ExtUtils-CBuilder-0.2703
 	o p5-Geo-IPfree-1.100470 [pkg/42833]
 	o p5-IMDB-Film-0.45
