--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.9215 2010/04/18 14:10:53 seb Exp $
+$NetBSD: TODO,v 1.9216 2010/04/18 14:52:17 wiz Exp $
 
 Suggested new packages
 ======================
@@ -348,6 +348,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o GMT-4.2.1
 	o GUIlib-1.1.2
 	o GutenMark-20090216
+	o ImageMagick-6.6.1.4
 	o MAMEDiff-2.30
 	o Mesa-7.8.1
 	o MesaLib-7.8.0
@@ -379,6 +380,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o alee-ttf-11.2
 	o alephone-20091015 [pkg/42397]
 	o aliados-0.2.0
+	o alsa-1.0.23
 	o alsa-plugins-1.0.22
 	o amanda-2.6.1p2
 	o amavis-perl-0.3.12 [called just amavis]
@@ -408,7 +410,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o aqsis-1.6.0
 	o aranym-0.9.9
 	o argtable-2.9
-	o aria2-1.9.0
+	o aria2-1.9.1
 	o arla-0.90
 	o arnold-20040104
 	o arping-2.09
@@ -419,10 +421,11 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ast-ksh-20080624 [pkg/37854]
 	o asterisk16-1.6.2.6
 	o astyle-1.15.3
-	o asymptote-1.92
+	o asymptote-1.93
 	o at-spi-1.30.0 [GNOME 2.30]
 	o aterm-1.0.1
 	o atk-1.30.0 [GNOME 2.30]
+	o attica-0.1.3
 	o auctex-11.86
 	o audacious-plugins-2.3
 	o autoconvert-0.3.16
@@ -458,7 +461,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o botan-1.9.6
 	o bouml-4.19.3
 	o brasero-2.30.0 [GNOME 2.30]
-	o bugzilla-3.4.5
+	o bugzilla-3.6
 	o bwbasic-2.50 [pkg/42846]
 	o byacc-20080824
 	o c4-1.10 [schmonz]
@@ -485,6 +488,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o claws-mail-3.7.3
 	o climm-0.6.4
 	o clutter-gtk-0.10.4 [obache, wait for gtk2+>=2.19.5]
+	o cmus-2.3.2
 	o colorize-0.3.4
 	o cone-0.78 [pkg/41623]
 	o cone-0.80
@@ -642,7 +646,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o font-mutt-misc-1.0.1
 	o font-sony-misc-1.0.1
 	o font-util-1.1.1
-	o fotoxx-10.1
+	o fotoxx-10.1.1
 	o frama-c-20100401
 	o freeciv-2.2.0
 	o freeglut-2.4.0
@@ -664,7 +668,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gaupol-0.15.1
 	o gbrainy-1.41
 	o gcalctool-5.30.0
-	o gcc-4.3.2
+	o gcc-4.5.0
 	o gcdmaster-1.2.3
 	o gcin-1.4.1
 	o gcombust-0.1.55
@@ -695,7 +699,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o glabels-2.2.7
 	o glade3-3.6.7 [GNOME 2.26]
 	o glib2-2.24.0
-	o glibmm-2.24.0
+	o glibmm-2.24.1
 	o global-5.7.2 [pkg/39760]
 	o global-5.7.3
 	o glom-1.10.0 [GNOME 2.26]
@@ -713,6 +717,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gnome-doc-utils-0.20.0 [GNOME 2.30]
 	o gnome-games-2.30.0 [GNOME 2.30]
 	o gnome-games-extra-data-2.30.0 [GNOME 2.30]
+	o gnome-icon-theme-2.30.1 [GNOME 2.30]
 	o gnome-mag-0.16.1 [GNOME 2.30]
 	o gnome-netstatus-2.28.0 [GNOME 2.28]
 	o gnome-nettool-2.30.0 [GNOME 2.30]
@@ -730,10 +735,10 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gnomeicu-0.99.14
 	o gnopernicus-1.1.2
 	o gnu-crypto-2.1.0
-	o gnumeric110-1.10.1
+	o gnumeric110-1.10.2
 	o gnupg2-2.0.15
 	o gob2-2.0.17
-	o goffice0.8-0.8.1
+	o goffice0.8-0.8.2
 	o gogo-3.11p1
 	o gok-2.30.0 [GNOME 2.30]
 	o golem-0.0.6
@@ -749,6 +754,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o graphviz-2.26.3
 	o grep-2.6.3
 	o gsasl-1.4.1
+	o gsed-4.2.1
 	o gsharutils-4.9
 	o gss-0.1.2
 	o gssdp-0.7.2
@@ -761,10 +767,10 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gtick-0.4.2
 	o gtk-systrace-20030623
 	o gtk2-2.20.0
-	o gtk2-engines-2.20.0 [GNOME 2.30]
+	o gtk2-engines-2.20.1 [GNOME 2.30]
 	o gtkglarea-2.0.1
 	o gtkimageview-1.6.4
-	o gtkmm-2.20.1
+	o gtkmm-2.20.2
 	o gtkmm-documentation-2.16.0 [GNOME 2.26]
 	o gtksourceview-2.10.0
 	o gtodo-0.16.0rc2
@@ -808,6 +814,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ifile-1.3.8
 	o ifp-line-0.3 [pkg/38038]
 	o ike-2.0.1 [pkg/37032]
+	o imake-1.0.3
 	o imp-4.3.6
 	o ingo-1.2.3
 	o inn-2.5.2
@@ -874,6 +881,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libX11-1.3.3
 	o libXt-1.0.8
 	o libao-1.0.0
+	o libao-sun-1.0.0
 	o libassuan-2.0.0
 	o libcares-1.7.0
 	o libdockapp-0.6.1
@@ -907,6 +915,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o liboobs-2.30.0 [GNOME 2.30]
 	o libproxy-0.4.0
 	o librep-0.90.5
+	o libsigc++-2.2.6
 	o libssh-0.4.2
 	o libssh2-1.2.5
 	o libstree-0.4.2
@@ -947,7 +956,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o manedit-1.2.1
 	o maradns-1.2.12.09
 	o matchbox-panel-0.9.3
-	o mathomatic-15.0.6
+	o mathomatic-15.0.7
 	o mc-4.7.0.4
 	o memconf-2.9 [pkg/40201]
 	o merb-1.0.8.1
@@ -1005,9 +1014,9 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o muse-0.9.2
 	o mysql51-server-5.1.45
 	o nagios-3.2.0
-	o nano-2.2.0
+	o nano-2.2.4
 	o nap-1.5.3
-	o nautilus-actions-2.30.1 [GNOME 2.30]
+	o nautilus-actions-2.30.2 [GNOME 2.30]
 	o nautilus-sendto-2.28.4
 	o navi2ch-1.8.1
 	o nawk-20071023
@@ -1064,7 +1073,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o oto-0.5
 	o otpCalc-0.97
 	o p5-Any-Moose-0.12
-	o p5-Compress-Raw-Zlib-2.025
+	o p5-Compress-Raw-Zlib-2.026
 	o p5-Config-General-2.45
 	o p5-DBD-postgresql-2.17.1
 	o p5-ExtUtils-CBuilder-0.2703
@@ -1073,18 +1082,21 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o p5-IO-Compress-2.026
 	o p5-IO-Socket-SSL-1.33
 	o p5-JSON-2.21
-	o p5-Mouse-0.53
+	o p5-Mouse-0.54
 	o p5-POE-1.289 [pkg/43115]
 	o p5-POE-Component-IRC-6.24 [pkg/42801]
 	o p5-POE-Component-SNMP-1.1006 [pkg/43116]
 	o p5-POE-Filter-IRCD-2.42 [pkg/42800]
 	o p5-POE-Test-Loops-1.035 [pkg/43114]
+	o p5-PerlMagick-6.6.1.4
 	o p5-Text-Markdown-1.000031
 	o p5-URI-1.54
+	o p5-YAML-LibYAML-0.33
 	o p5-ispman-1.2
 	o p5-sybperl-2.18
 	o packagekit-0.5.1
 	o pango-1.28.0 [GNOME 2.30]
+	o pangomm-2.26.1
 	o paprefs-0.9.8
 	o pari-galdata-2.2 [pkg/38117]
 	o patch-2.6.1
@@ -1138,7 +1150,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o puppet-0.25.4
 	o pure-ftpd-1.0.29
 	o puzzle-5.2
-	o puzzles-8914
+	o puzzles-8922
 	o pv-1.1.4
 	o pwlib-1.11.1
 	o py-FourSuite-1.0.2
@@ -1167,8 +1179,12 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o py-lxml-2.2.6
 	o py-m2crypto-0.20.2
 	o py-nevow-0.10.0
+	o py-nose-0.11.3 [pkg/43174]
 	o py-psycopg2-2.0.14
-	o py-pytz-2010g
+	o py-pyrex-0.9.9
+	o py-pytz-2010h
+	o py-qt4-4.7.3
+	o py-sip-4.10.2
 	o py-sybase-0.37
 	o py-urwid-0.9.9.1 [pkg/43104]
 	o python-2.5.5 [CVE-2009-3560, CVE-2009-3720]
@@ -1251,8 +1267,8 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o sch-3.8.3
 	o scilab-5.2.0
 	o scm-5e5
-	o scmgit-base-1.7.0.4
-	o scmgit-docs-1.7.0.4
+	o scmgit-base-1.7.0.5
+	o scmgit-docs-1.7.0.5
 	o scribus-1.3.6
 	o scrollz-1.9.99
 	o scsh-1.3.0
@@ -1283,6 +1299,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o snort-2.8.5.3
 	o snownews-1.5.12
 	o socat-1.7.1.2
+	o softhsm-1.1.4
 	o solfege-3.14.11
 	o sope-4.6
 	o sound-juicer-2.28.2 [GNOME 2.30]
@@ -1332,7 +1349,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o thunderbird-3.0.3
 	o tig-0.15
 	o tile-0.7.4
-	o tinc-1.0.12
+	o tinc-1.0.13
 	o tinyproxy-1.8.0
 	o tk-8.5.8
 	o tkcvs-8.2.1
@@ -1399,7 +1416,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o weewm-0.01
 	o whohas-0.24
 	o windowlab-1.40
-	o wine-devel-1.1.42
+	o wine-devel-1.1.43
 	o wml-2.0.11
 	o wmnd-0.4.13
 	o wmweather-2.4.4
@@ -1411,8 +1428,10 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o wwwoffle-2.9f
 	o wxRemind-101
 	o wyrd-1.4.4
-	o x264-devel-20100410
+	o x264-devel-20100417
 	o xanalyser-1.30
+	o xapian-1.0.19
+	o xapian-omega-1.0.19
 	o xaric-0.13.2
 	o xbiff-1.0.2
 	o xbindkeys-1.8.3
