--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.9220 2010/04/19 22:42:29 morr Exp $
+$NetBSD: TODO,v 1.9221 2010/04/20 13:42:35 wiz Exp $
 
 Suggested new packages
 ======================
@@ -442,14 +442,14 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o bbweather-0.6.3
 	o bdb-xml-2.0.9
 	o benchfft-3.1
-	o bftpd-2.7
+	o bftpd-2.8
 	o biew-6.1.0
 	o bind-9.6.2
 	o bind-9.7.0
 	o binutils-2.20.1
 	o bioperl-1.5.0
 	o bison-2.4.2
-	o bitlbee-1.2.5
+	o bitlbee-1.2.6
 	o bluefish-2.0.0
 	o blur6ex-0.3.462
 	o bmake-20100102
@@ -459,7 +459,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o bos-2.5
 	o boson-0.13
 	o botan-1.9.6
-	o bouml-4.19.3
+	o bouml-4.20
 	o brasero-2.30.0 [GNOME 2.30]
 	o bugzilla-3.6
 	o bwbasic-2.50 [pkg/42846]
@@ -468,7 +468,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o cadaver-0.23.0
 	o cal3d-0.11.0
 	o calamaris-2.59
-	o calibre-0.6.47
+	o calibre-0.6.48
 	o camlimages-3.0.2
 	o cardboard-schedule-1.14c [at http://www.bright-green.com/downloads/]
 	o cddbd-1.5.2
@@ -487,6 +487,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o classpath-0.98
 	o claws-mail-3.7.3
 	o climm-0.6.4
+	o clutter-1.2.6
 	o clutter-gtk-0.10.4 [obache, wait for gtk2+>=2.19.5]
 	o cmus-2.3.2
 	o colorize-0.3.4
@@ -569,7 +570,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o emacs-muse-3.20
 	o emacs-wiki-2.72
 	o emech-2.8.5.1
-	o empathy-2.30.0.1 [GNOME 2.30]
+	o empathy-2.30.0.2 [GNOME 2.30]
 	o enca-1.13
 	o enchant-1.6.0
 	o enlightenment-1.0.0
@@ -665,6 +666,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gap-4r4p9
 	o gated-3.6
 	o gaupol-0.15.1
+	o gbdfed-1.6
 	o gbrainy-1.41
 	o gcalctool-5.30.0
 	o gcc-4.5.0
@@ -679,10 +681,11 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gdm-2.30.0 [GNOME 2.30]
 	o gdsreader-0.3.2
 	o geany-0.18.1
-	o gedit-2.30.0 [GNOME 2.30]
+	o gedit-2.30.2 [GNOME 2.30]
 	o gedit-plugins-2.30.0 [GNOME 2.30]
 	o gegl-0.1.2
 	o gentoo-0.15.6
+	o geos-3.2.2 [pkg/43181]
 	o gettext-0.17
 	o gettext-m4-0.17
 	o gfract-0.33
@@ -695,7 +698,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o gkrellm-multiping-2.0.13
 	o gkrellm-snmp-1.0
 	o gkrellm-xmms-2.1.22
-	o glabels-2.2.7
+	o glabels-2.2.8
 	o glade3-3.6.7 [GNOME 2.26]
 	o glib2-2.24.0
 	o glibmm-2.24.1
@@ -915,6 +918,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libproxy-0.4.0
 	o librep-0.90.5
 	o libsigc++-2.2.6
+	o libspectre-0.2.5
 	o libssh-0.4.2
 	o libssh2-1.2.5
 	o libstree-0.4.2
@@ -1101,7 +1105,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o patch-2.6.1
 	o patchutils-0.3.1
 	o pavucontrol-0.9.8
-	o pbzip2-1.1.0
+	o pbzip2-1.1.1
 	o pcal-4.8
 	o pcmanfm-0.5.2 [pkg/42451]
 	o pdmenu-1.2.87
@@ -1149,7 +1153,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o puppet-0.25.4
 	o pure-ftpd-1.0.29
 	o puzzle-5.2
-	o puzzles-8922
+	o puzzles-8924
 	o pv-1.1.4
 	o pwlib-1.11.1
 	o py-FourSuite-1.0.2
@@ -1171,7 +1175,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o py-gnome2-desktop-2.30.0 [GNOME 2.30]
 	o py-gnosis-1.2.2
 	o py-gnosis-utils-1.2.1
-	o py-gtksourceview-2.10.0
+	o py-gtksourceview-2.10.1
 	o py-html2text-2.38
 	o py-jinja2-2.3 [pkg/42783]
 	o py-kenosis-0.96 [pkg/42561]
@@ -1183,6 +1187,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o py-pytz-2010h
 	o py-qt4-4.7.3
 	o py-sip-4.10.2
+	o py-sqlalchemy-0.6.0 [pkg/43180]
 	o py-sybase-0.37
 	o py-urwid-0.9.9.1 [pkg/43104]
 	o python-2.5.5 [CVE-2009-3560, CVE-2009-3720]
@@ -1315,6 +1320,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o stratagus-2.2.2
 	o streamripper-1.63.0
 	o subtitleeditor-0.33.0
+	o subversion-1.6.11
 	o sun-jdk6-6.0.19
 	o sun-jre6-6.0.19
 	o suse_base-11.0
@@ -1410,6 +1416,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o webalizer-2.21.2
 	o webby-0.9.3
 	o webmin-1.510
+	o weechat-0.3.2
 	o weewm-0.01
 	o whohas-0.24
 	o windowlab-1.40
